--- a/app/src/main/res/layout/info_notification.xml
+++ b/app/src/main/res/layout/info_notification.xml
@@ -71,15 +71,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center">
+        android:layout_height="55dp"
+        android:gravity="center"
+        android:padding="3dp">
 
 
         <Button
             android:id="@+id/btnSent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/title"
+            android:background="@drawable/selector_button"
             android:gravity="center"
             android:text="Gửi"
             android:textColor="@color/white" />
