--- a/app/src/main/res/layout/test_intro3.xml
+++ b/app/src/main/res/layout/test_intro3.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="10"
-    android:background="@color/title"
+    android:background="#5C6BC0"
     android:orientation="vertical">
 
     <ImageView
